--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <html>
    <head>
-       <title>Добро пожаловать на Test.com!</title>
+       <title>Wilkommen zu bconsuel.com!</title>
    </head>
    <body>
-       <h1>Это виртуальный хост test.com!</h1>
+       <h1>Arbeit macht kaput!</h1>
    </body>
 </html>
