--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
        <title>Wilkommen zu bconsuel.com!</title>
    </head>
    <body>
-       <h1>Arbeit macht kaput!</h1>
+       <h1>Arbeit macht frei!</h1>
    </body>
 </html>
